[gd_scene load_steps=26 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Jump.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Hit.wav" type="AudioStream" id=5]
[ext_resource path="res://couloir_mat1.tres" type="Material" id=6]
[ext_resource path="res://couloir_mat2.tres" type="Material" id=7]
[ext_resource path="res://DecorDefilant.gd" type="Script" id=8]
[ext_resource path="res://GenerateursCube.gd" type="Script" id=9]
[ext_resource path="res://GenerateurCube.gd" type="Script" id=10]
[ext_resource path="res://DestructeurCube.gd" type="Script" id=11]
[ext_resource path="res://Sounds/Dodge.wav" type="AudioStream" id=12]
[ext_resource path="res://font/zorque.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://LabelGameOver.gd" type="Script" id=14]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.160784, 0.576471, 0.352941, 1 )
emission_enabled = true
emission = Color( 0.262745, 0.756863, 0.364706, 1 )
emission_energy = 0.52
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.278431, 0.85098, 0.47451, 1 )
emission_enabled = true
emission = Color( 0.364706, 0.294118, 0.294118, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )
size = Vector3( 0.1, 0.1, 0.3 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 1.5, 0.5, 200 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 6, 2.52847, 1 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://font/zorque.ttf"

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = SubResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=11]
size = 64
font_data = ExtResource( 13 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="Player" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
script = ExtResource( 2 )

[node name="PlayerCube" type="MeshInstance" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area" type="Area" parent="Player"]

[node name="CollisionShape" type="CollisionShape" parent="Player/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 3 )

[node name="CPUParticles" type="CPUParticles" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.455193, 0 )
cast_shadow = 0
amount = 6
local_coords = false
mesh = SubResource( 5 )
spread = 27.58
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 8.0
initial_velocity_random = 0.73
scale_amount_random = 1.0

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 1, 0, 0, 0, 0.96054, 0.278141, 0, -0.278141, 0.96054, 0, 1.56145, 2.55515 )
far = 373.7
script = ExtResource( 3 )

[node name="JumpSound" type="AudioStreamPlayer3D" parent="Player"]
stream = ExtResource( 4 )

[node name="HitSound" type="AudioStreamPlayer3D" parent="Player"]
stream = ExtResource( 5 )

[node name="Ground" type="Spatial" parent="."]
editor/display_folded = true

[node name="Couloir1" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.2, 0, -70 )
mesh = SubResource( 6 )
material/0 = ExtResource( 6 )

[node name="Couloir2" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.6, 0, -70 )
mesh = SubResource( 6 )
material/0 = ExtResource( 7 )

[node name="Couloir3" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -70 )
mesh = SubResource( 6 )
material/0 = ExtResource( 6 )

[node name="Couloir4" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.6, 0, -70 )
mesh = SubResource( 6 )
material/0 = ExtResource( 7 )

[node name="Couloir5" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.2, 0, -70 )
mesh = SubResource( 6 )
material/0 = ExtResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.953658, -0.218715, -0.206641, 0, -0.686758, 0.726886, -0.300894, -0.6932, -0.654932, -7.98435, 10, -0.0994501 )
light_energy = 0.2
light_indirect_energy = 5.69
light_specular = 0.51
shadow_enabled = true

[node name="DirectionalLight2" type="DirectionalLight" parent="."]
transform = Transform( -0.151164, -0.647234, 0.747153, 0.303795, 0.68884, 0.658185, -0.940669, 0.326476, 0.0924987, -9.06649, 11.3569, -0.0994501 )
light_color = Color( 0.298039, 0.505882, 0.643137, 1 )
light_energy = 0.2
light_indirect_energy = 5.69
light_specular = 0.51

[node name="DecorDefilant" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -170 )
script = ExtResource( 8 )

[node name="GenerateursCube" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -170 )
script = ExtResource( 9 )

[node name="GenerateurCube1" type="Spatial" parent="GenerateursCube"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.2, 0.75, 0 )
script = ExtResource( 10 )

[node name="GenerateurCube2" type="Spatial" parent="GenerateursCube"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.6, 0.75, 0 )
script = ExtResource( 10 )

[node name="GenerateurCube3" type="Spatial" parent="GenerateursCube"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
script = ExtResource( 10 )

[node name="GenerateurCube4" type="Spatial" parent="GenerateursCube"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.6, 0.75, 0 )
script = ExtResource( 10 )

[node name="GenerateurCube5" type="Spatial" parent="GenerateursCube"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.2, 0.75, 0 )
script = ExtResource( 10 )

[node name="DestructeurCube" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 14.3143 )
script = ExtResource( 11 )

[node name="Area" type="Area" parent="DestructeurCube"]

[node name="CollisionShape" type="CollisionShape" parent="DestructeurCube/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.91425, 0 )
shape = SubResource( 7 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="DestructeurCube"]
stream = ExtResource( 12 )

[node name="GUI" type="MarginContainer" parent="."]
pause_mode = 2
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_right = 1004.0
margin_bottom = 580.0

[node name="LabelVies" type="Label" parent="GUI/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 9 )
text = "VIES : "

[node name="LabelScore" type="Label" parent="GUI/VBoxContainer"]
margin_top = 41.0
margin_right = 1004.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 10 )
text = "SCORE : "

[node name="Grid" type="CenterContainer" parent="GUI/VBoxContainer"]
margin_top = 82.0
margin_right = 1004.0
margin_bottom = 239.0

[node name="LabelGameOver" type="Label" parent="GUI/VBoxContainer/Grid"]
margin_left = 258.0
margin_right = 746.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 11 )
text = "GAME OVER !
Hit 'S' to start"
align = 1
script = ExtResource( 14 )
[connection signal="body_entered" from="Player/Area" to="." method="_on_Player_collision"]
[connection signal="body_entered" from="DestructeurCube/Area" to="DestructeurCube" method="_on_Area_body_entered"]
